--- a/config/yugabyte/demo/featurebench_count_query.yaml
+++ b/config/yugabyte/demo/featurebench_count_query.yaml
@@ -14,67 +14,65 @@ works:
         rate: 1000
         warmup: 0
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
-        setAutoCommit : true
+        setAutoCommit: true
         create:
             - DROP TABLE IF EXISTS demo2col;
             - CREATE TABLE demo2col (id INT, col1 TEXT, col2 TEXT, primary key (id ASC)) ;
         loadRules:
-            -   table: demo2col
-                rows: 10
-                columns:
-                    -   name: id
-                        util: PrimaryIntGen
-                        params:
-                            - 1
-                            - 1000
-                    -   name: col
-                        count: 2
-                        util: RandomStringNumeric
-                        params:
-                            - 128
+            - table: demo2col
+              rows: 10
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params:
+                        - 1
+                        - 1000
+                  - name: col
+                    count: 2
+                    util: RandomStringNumeric
+                    params:
+                        - 128
         executeRules:
             - workload: RangeScan
               run:
-                  -   name: ReadQuery1
-                      weight: 50
-                      queries:
-                          -   query: SELECT * FROM demo2col WHERE id < 10
-                              count : 3
-                  -   name: WriteQuery1
-                      weight: 50
-                      queries:
-                          -   query: UPDATE demo2col set col2 = ? where id = ?
-                              count : 2
-                              bindings:
-                                  -   util: RandomAString
-                                      params:
-                                          - 10
-                                          - 20
-                                  -   util: RandomNumber
-                                      params:
-                                          - 1
-                                          - 1000
+                  - name: ReadQuery1
+                    weight: 50
+                    queries:
+                        - query: SELECT * FROM demo2col WHERE id < 10
+                          count: 3
+                  - name: WriteQuery1
+                    weight: 50
+                    queries:
+                        - query: UPDATE demo2col set col2 = ? where id = ?
+                          count: 2
+                          bindings:
+                              - util: RandomAString
+                                params:
+                                    - 10
+                                    - 20
+                              - util: RandomNumber
+                                params:
+                                    - 1
+                                    - 1000
 
-
-
-            -  run:
-                   -   name: ReadQuery2
-                       weight: 50
-                       queries:
-                           -   query: SELECT * FROM demo2col WHERE id < 10
-                   -   name: WriteQuery2
-                       weight: 50
-                       queries:
-                           -   query: UPDATE demo2col set col2 = ? where id = ?
-                               count : 2
-                               bindings:
-                                   -   util: RandomAString
-                                       params:
-                                           - 10
-                                           - 20
-                                   -   util: RandomNumber
-                                       params:
-                                           - 1
-                                           - 1000
+            - run:
+                  - name: ReadQuery2
+                    weight: 50
+                    queries:
+                        - query: SELECT * FROM demo2col WHERE id < 10
+                  - name: WriteQuery2
+                    weight: 50
+                    queries:
+                        - query: UPDATE demo2col set col2 = ? where id = ?
+                          count: 2
+                          bindings:
+                              - util: RandomAString
+                                params:
+                                    - 10
+                                    - 20
+                              - util: RandomNumber
+                                params:
+                                    - 1
+                                    - 1000
