--- a/config/yugabyte/demo/featurebench_sampleimplementation_4.yaml
+++ b/config/yugabyte/demo/featurebench_sampleimplementation_4.yaml
@@ -16,25 +16,25 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
         create:
             - DROP TABLE IF EXISTS accounts;
             - CREATE TABLE accounts (id int NOT NULL, name varchar(64) NOT NULL, CONSTRAINT pk_accounts PRIMARY KEY (id));
             - CREATE INDEX idx_accounts_name ON accounts (name);
         loadRules:
-            -   table: accounts
-                rows: 100
-                columns:
-                    - name : id
-                      util : PrimaryIntGen
-                      params :
-                          - 1
-                          - 100
-                    - name : name
-                      util : RandomStringNumeric
-                      params:
-                          - 10
+            - table: accounts
+              rows: 100
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params:
+                        - 1
+                        - 100
+                  - name: name
+                    util: RandomStringNumeric
+                    params:
+                        - 10
 #        executeRules:
 #            -   transaction_name: Account_query
 #                weight: 100
