--- a/config/yugabyte/test_config.yaml
+++ b/config/yugabyte/test_config.yaml
@@ -16,7 +16,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
         create:
             - DROP TABLE IF EXISTS distributors;
@@ -24,26 +24,26 @@ microbenchmark:
             - CREATE SEQUENCE serial_no INCREMENT 1 START 1;
             - CREATE TABLE distributors(did DECIMAL(3) DEFAULT NEXTVAL('serial_no'), dname varchar(40) DEFAULT 'Lusofilms');
         loadRules:
-            -   table: distributors
-                rows: 5
-                columns:
-                    - name : dname
-                      util : RandomAstring
-                      params:
-                          - 1
-                          - 20
-            -   table: distributors
-                rows: 5
-                columns:
-                    - name: dname
-                      util: OneStringFromArray
-                      params:
-                           - LusoFilms
-                           - Associated Computing, Inc
-                           - XYZ Widgets
-                           - Gizmo Transglobal
-                           - Redline GmbH
-                           - Acme Corporation
+            - table: distributors
+              rows: 5
+              columns:
+                  - name: dname
+                    util: RandomAstring
+                    params:
+                        - 1
+                        - 20
+            - table: distributors
+              rows: 5
+              columns:
+                  - name: dname
+                    util: OneStringFromArray
+                    params:
+                        - LusoFilms
+                        - Associated Computing, Inc
+                        - XYZ Widgets
+                        - Gizmo Transglobal
+                        - Redline GmbH
+                        - Acme Corporation
 
         cleanup:
             - DROP TABLE distributors;
