--- a/config/yugabyte/featurebench_santanu_test.yaml
+++ b/config/yugabyte/featurebench_santanu_test.yaml
@@ -51,7 +51,7 @@ microbenchmark:
                         - 5
                         - 6
                   - name: v2
-                    util: RandomAstring
+                    util: RandomAString
                     params:
                         - 2
                         - 5
