--- a/config/yugabyte/demo/featurebench_santanu_employees1M.yaml
+++ b/config/yugabyte/demo/featurebench_santanu_employees1M.yaml
@@ -16,7 +16,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
         create:
             - DROP TABLE IF EXISTS employees1M;
