--- a/config/yugabyte/demo/featurebench_microbenchmark_1.yaml
+++ b/config/yugabyte/demo/featurebench_microbenchmark_1.yaml
@@ -32,5 +32,5 @@ microbenchmark:
                     params:
                         - 1
                         - 20
-#        cleanup:
-#            - DROP TABLE distributors;
+        cleanup:
+            - DROP TABLE distributors;
