--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -35,7 +35,7 @@ microbenchmark:
                         params:
                             - 128
         executeRules:
-            - workload: RangeScan
+            - workload: RangeScan1
               run:
                   -   name: ReadQuery1
                       weight: 50
@@ -57,8 +57,8 @@ microbenchmark:
                                           - 1000
 
 
-
-            -  run:
+            - workload: RangeScan2
+              run:
                   -   name: ReadQuery2
                       weight: 50
                       queries:
