--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -9,7 +9,7 @@ loaderthreads: 1
 terminals: 1
 works:
     work:
-        time: 60
+        time_secs: 60
         active_terminals: 1
         rate: 1000
         warmup: 0
@@ -77,3 +77,4 @@ microbenchmark:
                                       params:
                                           - 1
                                           - 1000
+   
