--- a/config/yugabyte/demo/featurebench_explain.yaml
+++ b/config/yugabyte/demo/featurebench_explain.yaml
@@ -9,7 +9,7 @@ loaderthreads: 1
 terminals: 1
 works:
     work:
-        time: 5
+        time_secs: 5
         active_terminals: 1
         rate: 1000
         warmup: 0
