--- a/config/yugabyte/demo/featurebench_scan_sonal.yaml
+++ b/config/yugabyte/demo/featurebench_scan_sonal.yaml
@@ -9,7 +9,7 @@ loaderThreads: 1
 terminals: 1
 works:
     work:
-        time: 10
+        time_secs: 10
         rate: 1000
         weights: 100
 transactiontypes:
