--- a/config/yugabyte/featurebench_select.yaml
+++ b/config/yugabyte/featurebench_select.yaml
@@ -9,7 +9,7 @@ loaderThreads: 1
 terminals: 1
 works:
     work:
-        time: 60
+        time_secs: 60
         active_terminals: 1
         rate: 1000
         warmup: 0
